# OpenTabletFirmware

./: .clangd  .gitignore  CMakeLists.txt  README.md  gd32f3x0.ld
Firmware/CMSIS/GD/GD32F3x0/Include/: gd32f3x0.h
Firmware/CMSIS/GD/GD32F3x0/Source/GNU/: startup_gd32f3x0.cpp
Firmware/GD32F3x0_standard_peripheral/Source/: gd32f3x0_fmc.c
Firmware/GD32F3x0_usbfs_library/driver/Include/: drv_usb_hw.h
Firmware/GD32F3x0_usbfs_library/driver/Source/: drv_usbd_int.c
Utilities/: gd32f350r_eval.c  gd32f350r_eval.h  gd32f3x0_lcd_eval.c  gd32f3x0_lcd_eval.h
Utilities/LCD_Common/: lcd_font.h  lcd_log.c  lcd_log.h
main/inc/: adc.h  gd32f3x0_it.h  gd32f3x0_libopt.h  pen.h  usb_conf.h  usbd_conf.h
main/src/: adc.c  app.c  gd32f3x0_hw.c  gd32f3x0_it.c  pen.c  system_gd32f3x0.c
scripts/: README.md  decrypt_fw_bin.py  load_gd32_structures.py
